--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <body>
         <div id="root">
             <nav id="main-nav" class="sidebar">
-                <a href="/" onclick="route()">Home</a>
-                <a href="/about" onclick="route()">About</a>
-                <a href="/lorem" onclick="route()">Lorem</a>
+                <a href="#/">Home</a>
+                <a href="#/about">About</a>
+                <a href="#/lorem">Lorem</a>
             </nav>
             <div id="main-page"></div>
         </div>
