added a id as parameter

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
                 <a href="#/about">About</a>
                 <a href="#/lorem">Lorem</a>
             </nav>
-            <div id="main-page"></div>
+            <div id="main-page">
+
+
+
+            </div>
         </div>
 
         <script src="js/router.js"></script>
