--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,10 @@
         This is a good solution to that problem.
     </p>
     <p>
-        Check out the source code to see how things work. If you want to try it out for yourself, fork this sandbox and
-        play around with it!
+       
+<a href="#/about">Go to About (no ID)</a>
+<a href="#/about/42">Go to About (User 42)</a>
+
+
     </p>
 </div>
