--- a/pages/about.html
+++ b/pages/about.html
@@ -2,6 +2,11 @@
     <h1>About</h1>
     <div>Check Out the Socials</div>
     <hr />
+
+
+<h2>About Page</h2>
+<p id="user-id"></p>
+
     <div class="socials-container">
         <a href="https://www.youtube.com/channel/UC6pFfiYWbtNkU-u2ZXUfzZw" class="socials-card" target="_blank">
             <i class="mdi mdi-youtube"></i>
