working router final

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,8 +7,11 @@
     </p>
     <p>
        
-<a href="#/about">Go to About (no ID)</a>
-<a href="#/about/42">Go to About (User 42)</a>
+ <ul>
+      <li><a href="#/about">#/about</a> - No user selected</li>
+      <li><a href="#/about/42">#/about/42</a> - User ID 42</li>
+      <li><a href="#/about/42/post/5">#/about/42/post/5</a> - User 42, Post 5</li>
+    </ul>
 
 
     </p>
