--- a/pages/about.html
+++ b/pages/about.html
@@ -5,8 +5,15 @@
 
 
 <h2>About Page</h2>
-<p id="user-id"></p>
-
+<div>
+  <h1>About Page</h1>
+  <div id="user-id">Loading user information...</div>
+  <div id="post-id" style="display: none;">Loading post information...</div>
+  <div id="content">
+    <p>Welcome to the about page. Use the URLs below to test:</p>
+   
+  </div>
+</div>
     <div class="socials-container">
         <a href="https://www.youtube.com/channel/UC6pFfiYWbtNkU-u2ZXUfzZw" class="socials-card" target="_blank">
             <i class="mdi mdi-youtube"></i>
