router with dynamic params

--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@
 <div>
   <h1>About Page</h1>
   <div id="user-id">Loading user information...</div>
-  <div id="post-id" style="display: none;">Loading post information...</div>
+  <div id="post-id">Loading post information...</div>
   <div id="content">
     <p>Welcome to the about page. Use the URLs below to test:</p>
    
